--- a/templates/ctb/user_detail.html
+++ b/templates/ctb/user_detail.html
@@ -41,8 +41,7 @@
             <div class="col-md-8">
                 <div class="card user-panel">
                     <div class="card-header">
-                        <h4><i class="fa-solid fa-user me-2"></i> Personal Details
-
+                        <h4><i class="fa-solid fa-user me-2"></i> My Profile
                         </h4>
                     </div>
                     <div class="card-body px-5 py-3">
