--- a/static/css/style.css
+++ b/static/css/style.css
@@ -205,6 +205,84 @@ body {
     display: inline;
 }
 
+.clinical-step {
+  position: relative;
+  min-height: 1em;
+  color: #a8a8a8;
+}
+.title {
+  line-height: 1.5em;
+  font-weight: bold;
+}
+.caption {
+  font-size: 0.8em;
+}
+.clinical-step + .clinical-step {
+  margin-top: 1.5em
+}
+.clinical-step > div:first-child {
+  position: static;
+  height: 0;
+}
+.clinical-step > div:not(:first-child) {
+  margin-left: 1.5em;
+  padding-left: 1em;
+}
+/* Circle */
+.circle {
+  background: #a8a8a8;
+  position: relative;
+  width: 1.5em;
+  height: 1.5em;
+  line-height: 1.5em;
+  border-radius: 100%;
+  color: #fff;
+  text-align: center;
+  box-shadow: 0 0 0 3px #fff;
+    z-index: 10;
+}
+/* Vertical Line */
+.circle:after {
+  content: ' ';
+  position: absolute;
+  display: block;
+  top: 3px;
+  right: 50%;
+  bottom: 0px;
+  left: 50%;
+  height: 100%;
+  width: 1px;
+  transform: scale(1, 2);
+  transform-origin: 50% -100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  z-index: 0;
+}
+.clinical-step:last-child .circle:after {
+  display: none
+}
+.clinical-step.step-done {
+  color: #4d6ea0;
+
+}
+.clinical-step.step-done .circle {
+  background-color: #4d6ea0;
+
+}
+.clinical-step.step-done.step-active .circle {
+  background-color: #4d6ea0;
+
+}
+
+.clinical-step.step-done .circle:before {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    content: "\f00c";
+}
+.clinical-step.step-done.step-active .circle:before {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    content: "\f111";
+}
 /*.pub-year{*/
     /*padding-top: 70px;*/
 /*}*/
