--- a/templates/ctb/filter_saved_searches.html
+++ b/templates/ctb/filter_saved_searches.html
@@ -5,7 +5,7 @@
         <th>Type</th>
         <th>Results</th>
         <th>Proceed</th>
-        <th>Delete</th>
+        <th class="text-center">Delete</th>
     </tr>
     </thead>
     <tbody>
